# read-story

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  build.gradle  docker-compose.yml  settings.gradle
migrations/: 20260120000000_initial_schema.sql
src/: db.rs  main.rs
src/handlers/: bookmark.rs  crawl.rs  mod.rs  view.rs
src/main/java/com/example/readstory/: ReadStoryApplication.java
src/main/java/com/example/readstory/common/annotation/: Source.java  Strategy.java
src/main/java/com/example/readstory/common/config/: ApplicationConfig.java
src/main/java/com/example/readstory/common/dto/: BaseResponse.java  RetrySpec.java
src/main/java/com/example/readstory/common/entities/: BaseEntity.java
src/main/java/com/example/readstory/common/enums/: Status.java
src/main/java/com/example/readstory/common/service/: HtmlParseService.java  HtmlParseServiceImpl.java  RetryService.java
src/main/java/com/example/readstory/common/utils/: BaseResponseMapper.java
src/main/java/com/example/readstory/crawl/dto/: MTCChaptersResponse.java
src/main/java/com/example/readstory/util/: ReflectionUtil.java  StrategyUtil.java
src/main/resources/: application.yml
src/main/resources/static/css/: style.css
src/main/resources/templates/: chapter.html  chapters.html  stories.html
src/models/: bookmark.rs  chapter.rs  mod.rs  source.rs  story.rs
src/service/: mod.rs
src/service/crawl/: mod.rs  mtc.rs  tf.rs
src/test/java/com/example/readstory/: ReadStoryApplicationTests.java
static/css/: style.css
templates/: chapter.html  chapters.html  stories.html
(+20 files in other folders)
