[package]
name = "read-story"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-files = "0.6.9"
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
askama = "0.15.1"
reqwest = { version = "0.13.1", features = ["json"] }
scraper = "0.25.0"
dotenvy = "0.15.7"
log = "0.4.29"
env_logger = "0.11.8"
futures = "0.3.31"
async-trait = "0.1.89"
aes = "0.9.0-rc.2"
cbc = "0.2.0-rc.2"
base64 = "0.22.1"
regex = "1.12.2"
shuttle-runtime = { version = "0.57.0", optional = true }
shuttle-actix-web = { version = "0.57.0", optional = true }
shuttle-shared-db = { version = "0.57.0", features = ["postgres"], optional = true }

[dev-dependencies]
actix-test = "0.1.5"
